# model

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  abc.py  app.py  baseline.py  canbench.yml  canister_ids.json  compute_params.py  config.py  dfx.json  flake.nix  format_labeled.py  format_sw.py  index.html  model.did  model_assessment.py  package-lock.json  package.json  poc.js  poc.ts  project.yml  py_sec_amps.json  requirements.txt  retrieve_archive.py  test.py  train.py
.github/workflows/: archive-data.yml  cd.yml  docker.yml  fmt.yml  js-cd.yml  tests.yml
app/: __main__.py  baseline.py  data_utils.py  matrix.py  model.py  rendering.py
app/features/: features.py  quantiles.py
benches/: secs.rs
contours/: eslint.config.mjs  index.ts  package-lock.json  package.json  tsconfig.json
data/: archive_update_date.txt  quantiles copy.json  quantiles.json
data/formatting/: dl.sh  list.txt  magnetometre-2.py  magnetometre.py  (+1 more)
declarations/: package-lock.json  package.json
docs/: norlys.txt
legacy/: clean.py  compute_params.py  format_history.py  format_labeled.py  model_assessment.py
norlys/: baseline.py  data_utils.py  features.py  fetch.py  matrix.py  model.py  rendering.py
norlys /: config.py  data_utils.py  model.py
pkg/: README.md  norlys.d.ts  norlys.js  norlys_bg.wasm  norlys_bg.wasm.d.ts  package.json
resources/: obs_b.json
src/: geo.rs  grid.rs  lib.rs  main.rs  matrix.rs  model.did  model.rs  overlays.rs  secs.rs  sphere.rs  svd.rs  t_df.rs
tests/: angular_distance.py  bearing+angular.py  bearing.py  fit.py  plot.py  secs_py.json  secs_rs.json  t_df.py  test.py  test_secs.py
(+2380 files in other folders)
