[package]
name = "model"
description = "norlys.live model"
repository = "https://github.com/norlys-org/model"
version = "0.25.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# [workspace]
# members = [".", "protobufs/build"]

[dependencies]
# protobufs = { path = "./protobufs/build" }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
assert_approx_eq = "1.1.0"
approx = "0.5.1"
ndarray = "0.16.1"
nalgebra = "0.33.2"
