[package]
name = "model"
description = "norlys.live model"
repository = "https://github.com/norlys-org/model"
version = "0.25.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
approx = "0.5.1"

ndarray = { version = "0.16.1", features = ["serde"] }
# used for svd
nalgebra = "0.33.2"
# used for tensordot
ndarray-einsum = "0.8.0"

ic-cdk = "0.17.2"
canbench-rs = { version = "0.1.1", optional = true }
candid = "0.10"

serde = "1.0.219"
